Fix price alignment bug

--- a/src/styles/scss/components/_listingCard.scss
+++ b/src/styles/scss/components/_listingCard.scss
@@ -27,6 +27,7 @@
   }
 
   &__price {
+    align-self: flex-start;
     gap: rem(4);
     font-size: rem(12);
     &--new {
